# plastinka_sapr

./: CMakeLists.txt  Makefile  README.md  plotGrid.py  plotHeatmap.py  plot_heatmap.py
include/: arc.hpp  base.hpp  border.hpp  curve.hpp  generate_grid.hpp  grid.hpp  grid_generator.hpp  line.hpp  model.hpp  solution.hpp  solvers.hpp  tridiagonal_matrix.hpp
include/curves/: arc.hpp  curve.hpp  line.hpp
include/matrices/: base_matrix.hpp  eigen_sparce_matrix.hpp  tridiagonal_matrix.hpp
include/solvers/: base_solver.hpp  explicit_solver.hpp  implicit_fast_solver.hpp  implicit_solver.hpp  laplacian_calculator.hpp  laplasian_calculator.hpp  solvers.hpp
src/: arc.cpp  generate_grid.cpp  grid.cpp  grid_generator.cpp  line.cpp  main.cpp  solution.cpp  solvers.cpp  tridiagonal_matrix.cpp
src/curves/: arc.cpp  line.cpp
src/matrices/: eigen_sparce_matrix.cpp  tridiagonal_matrix.cpp
src/solvers/: base_solver.cpp  explicit_solver.cpp  implicit_fast_solver.cpp  implicit_solver.cpp  laplacian_calculator.cpp  laplasian_calculator.cpp  solvers.cpp
tests/: CMakeLists.txt
tests/curves/: test_line.cpp
